# py-file-organizer

./: README.md  pyproject.toml
src/philiprehberger_file_organizer/: __init__.py
tests/: test_import.py
