[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-file-organizer"
version = "0.1.2"
description = "Rule-based file sorting engine with pattern matching and dry run support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-file-organizer#readme"
Repository = "https://github.com/philiprehberger/py-file-organizer"
Issues = "https://github.com/philiprehberger/py-file-organizer/issues"
Changelog = "https://github.com/philiprehberger/py-file-organizer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_file_organizer"]
